--- a/src/app/category/category.html
+++ b/src/app/category/category.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="componentType == 'home' ; else productCom">
-  <div class="cont h-32 rounded-lg bg-violet-700 shadow shadow-xl " >
+  <div class="cont h-32 rounded-lg bg-blue-950 shadow shadow-xl w-50 text-center text-black" >
     <h1 class="pt-12 p-4 text-2xl text-white font-bold ">{{ category.name }}</h1> 
   </div>
 </ng-container>
